--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -41,7 +41,7 @@
   },
   "growiPlugin": {
     "types": [
-      "style"
+      "theme"
     ]
   }
 }
