--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   ],
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "build": "yarn build:libs & yarn build:themes",
+    "build:w": "yarn build:libs -w & yarn build:themes -w",
+    "build:libs": "vite -c vite.libs.config.ts build",
+    "build:themes": "vite -c vite.themes.config.ts build",
+    "lint:eslint": "eslint --quiet \"**/*.{js,jsx,ts,tsx}\"",
+    "lint:styles": "stylelint src/**/*.scss",
+    "lint": "run-p lint:*",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -37,7 +42,7 @@
     "jest": "^29.1.2",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.2.5"
   },
   "growiPlugin": {
     "types": [
