--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
       {
         "name": "welcome-to-fumiya-room",
         "manifestKey": "src/styles/style.scss",
-        "schemeType": "both",
+        "schemeType": "light",
         "bg": "#00FFFF",
         "topbar": "linear-gradient(to right,#e60000 14%,#f39800 28%,#fff100 42%,#009944 56%,#0068b7 70%,#1d2088 87%,#920783 100%)",
         "sidebar": "#00ff00",
