--- a/package.json
+++ b/package.json
@@ -19,31 +19,15 @@
     "lint": "run-p lint:*",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-innertext": "^1.1.5"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vitejs/plugin-react": "^2.1.0",
-    "bootstrap": "^4.6.1",
-    "eslint": "^8.18.0",
-    "eslint-config-next": "^12.1.6",
-    "eslint-config-weseek": "^2.1.0",
-    "eslint-import-resolver-typescript": "^3.2.5",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-regex": "^1.10.0",
-    "jest": "^29.1.2",
-    "sass": "^1.55.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.5"
+    "@biomejs/biome": "1.7.3",
+    "bootstrap": "^5.3.3",
+    "sass": "^1.77.1",
+    "stylelint": "^16.5.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "vite": "^5.2.11"
   },
   "growiPlugin": {
     "schemaVersion": "4",
