--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
   "files.eol": "\n",
 
-  "eslint.workingDirectories": [{ "mode": "auto" }],
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.formatOnSave": true,
+
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.addMissingImports": "explicit",
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.stylelint": "explicit"
+  },
 
   // use vscode-stylelint
   // see https://github.com/stylelint/vscode-stylelint
@@ -11,10 +19,15 @@
   "less.validate": false,
   "scss.validate": false,
 
-  "editor.codeActionsOnSave": {
-    "source.fixAll.stylelint": "explicit"
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
   },
-
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[scss]": {
     "editor.defaultFormatter": "stylelint.vscode-stylelint"
   },
