--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {},
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "postcss": "^8.4.38",
     "sass": "^1.77.1",
     "stylelint": "^16.5.0",
     "stylelint-config-recess-order": "^5.0.1",
