update stylelint settings

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
     "stylelint-config-standard-scss",
     "stylelint-config-recess-order"
   ],
+  "ignoreFiles": "dist/**/*",
   "rules": {
     "rule-empty-line-before": [
       "always-multi-line",
